[fix] prolong failure detection due to bandwidth limit

--- a/.sdfs/config.yml
+++ b/.sdfs/config.yml
@@ -33,12 +33,12 @@ heartbeat:
   introducer: "fa23-cs425-8701.cs.illinois.edu"
   targetNumber: 4
 failure_detect:
-  interval: 1000ms # check failure every <interval> millisecond
-  failure_timeout: 3000ms # set to failure if no heartbeat received for <timeout> millisecond
+  interval: 3000ms # check failure every <interval> millisecond
+  failure_timeout: 6000ms # set to failure if no heartbeat received for <timeout> millisecond
   suspicion:
-    enable: false # enable suspicion
-    suspect_timeout: 1500ms # set to suspect if no heartbeat received for <timeout> millisecond
-    failure_timeout: 2000ms # set to failure if suspected and no heartbeat received for <timeout> millisecond
+    enable: true # enable suspicion
+    suspect_timeout: 3000ms # set to suspect if no heartbeat received for <timeout> millisecond
+    failure_timeout: 5000ms # set to failure if suspected and no heartbeat received for <timeout> millisecond
 cleanup:
   interval: 1000ms # clean up left / failure every <interval> millisecond
   timeout: 3000ms # remove from membership if left or failed for <timeout> millisecond
